--- a/Home Page/Customers/index.html
+++ b/Home Page/Customers/index.html
@@ -54,8 +54,8 @@
 </div>
 
 <!--CUSTOMERS-->
-<div class="main min-vh-100 pb-5">
-  <div class="container-sm-fluid bg-white mb-5 mx-2 p-3 shadow rounded">
+<div class="main">
+  <div class="container-sm-fluid bg-white mx-2 p-3 shadow rounded">
     <div class="container-sm-fluid px-3">
       <div class="row mb-3">
         <h2 class="top-heading m-0">Customers</h2>
