--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <div class="col-sm-12 col-lg-4 col-xl-4 mt-5">
                 <span><h3 class="signin">Sign In</h3></span>
                 <form action="">
-                    
+                    <div class="card mb-1 p-2 text-center">
+                        <p class="demo-text">Demo login credentials</p>
+                        <p class="demo-text colored-text">This password section is only for demo</p>
+                    </div>
                     <div class="form-group">
                         <input type="text" class="form-control mb-2 col-12" placeholder="Email">
                         <input type="text" class="form-control mb-2 col-12" placeholder="Password">
