--- a/Home Page/POS/index.html
+++ b/Home Page/POS/index.html
@@ -18,15 +18,15 @@
 </head>
 <body>
 <!--NAV BAR-->
-    <div class="nav-bar-wrapper container-md-fluid py-1 shadow-sm sticky-top bg-white">
-        <div class="row justify-content-between w-100">
+    <div class="nav-bar-wrapper container-md-fluid shadow-sm sticky-top bg-white">
+        <div class="row justify-content-between w-100 align-items-center">
             <div class="logo-area pl-4 col-6 col-md-5">
               <a href="#">
-                <h1 class="text-danger font-weight-bold">LOGO</h1>
+                <h1 class="text-danger font-weight-bold m-0">LOGO</h1>
               </a>
             </div>
 
-            <nav class="navbar navbar-expand-md navbar-light col-6 col-md-5 justify-content-end justify-content-md-center">
+            <nav class="navbar navbar-expand-md navbar-light col-6 col-md-2 justify-content-end">
               <div class="row w-100 justify-content-end justify-content-md-around">
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
                     <span><img src="./assets/navbar-logo/list.png" alt="" class="dropdown-icon"></span>
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse col-12" id="collapse_target">
                     <ul class="navbar-nav row w-100  m-0 justify-content-around">
                         <li class="nav-item dropdown">
-                            <a href="#" class="nav-link navigation-link dropdown-toggle text-dark"  data-toggle="dropdown" data-target="dropdown_target">
+                            <a href="#" class="nav-link navigation-link dropdown-toggle text-dark font-weight-bold"  data-toggle="dropdown" data-target="dropdown_target">
                                 <span><img class="rounded-circle navbar-items-logo" src="./assets/navbar-logo/profile-user.png" alt=""></span>
                                 Admin
                             </a>
@@ -54,10 +54,10 @@
     </div>
 
 <!--POS-->
-<div class="main">
-  <div class="container-sm-fluid mx-3">
-    <div class="row pr-3">
-        <div class="col-md-6 px-2">
+<div class="main py-4">
+  <div class="container-sm-fluid pb-5 pb-sm-5 pb-md-5 px-3">
+    <div class="row">
+        <div class="col-md-7 p-0">
             <div class="order-menu px-3">
                 <div class="row justify-content-center py-1">
                     <form class="form-row w-100" action="POST">
@@ -69,10 +69,10 @@
                                 <input type="text" class="form-control search-area bg-white rounded-0" placeholder="Search by name, group" aria-label="" aria-describedby="basic-addon1">
                               </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 m-md-0 my-2">
                             <button type="button" class="seagreen-color btn btn-block rounded-0">SETTLED</button>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 m-md-0">
                             <button type="button" class="tomato-color btn btn-block rounded-0">SUBMITTED</button>
                         </div>
                     </form>
@@ -148,65 +148,54 @@
                         <div class="row bg-white">
                             <div class="col-md-12 p-2">
                                 <h4 class="bg-danger text-center text-white p-2 m-0">Variations</h4>
-                                <table class="table table-bordered table--text table-hover">
-                                    <thead>
-                                        <th scope="col">
-                                            Name
-                                        </th>
-                                        <th scope="col">
-                                            Price
-                                        </th>
-                                    </thead>
-                                    <tbody class="bg-light">
-                                        <tr>
-                                            <td>Small</td>
-                                            <td>10 Rs</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Small</td>
-                                            <td>10 Rs</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Small</td>
-                                            <td>10 Rs</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="col-md-12 p-2">
-                                <h4 class="bg-danger text-center text-white p-2 m-0">Variations</h4>
-                                <table class="table table-bordered table--text table-hover">
-                                    <thead>
-                                        <th scope="col">
-                                            Name
-                                        </th>
-                                        <th scope="col">
-                                            QTY
-                                        </th>
-                                        <th scope="col">
-                                            Price
-                                        </th>
-                                    </thead>
-                                    <tbody class="bg-light">
-                                        <tr>
-                                            <td>Small</td>
-                                            <td>10 Rs</td>
-                                            <td>2</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Small</td>
-                                            <td>10 Rs</td>
-                                            <td>2</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <div class="table-responsive">
+                                    <table class="table table-bordered table-sm">
+                                        <thead class="bg-white">
+                                            <th scope="col" class="px-5">
+                                                Name
+                                            </th>
+                                            <th scope="col">
+                                                Price
+                                            </th>
+                                        </thead>
+                                        <tbody class="bg-light">
+                                            <tr>
+                                                <td>
+                                                    <label class="m-auto">
+                                                        <input type="checkbox" class="kitchen-order-list-checkbox">
+                                                      </label>
+                                                    Small
+                                                </td>
+                                                <td>10$</td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <label class="m-auto">
+                                                        <input type="checkbox" class="kitchen-order-list-checkbox">
+                                                      </label>
+                                                    Medium
+                                                </td>
+                                                <td>20$</td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <label class="m-auto">
+                                                        <input type="checkbox" class="kitchen-order-list-checkbox">
+                                                      </label>
+                                                    Large
+                                                </td>
+                                                <td>25$</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-2 py-1 d-flex flex-column justify-content-between">
+        <div class="col-md-2 px-4 py-1 d-flex flex-column justify-content-between">
             <div class="form-group m-0">
                 <select id="inputState" class="form-control">
                   <option selected>Select Branch</option>
@@ -222,13 +211,13 @@
                   </div>
               </div>
         </div>
-        <div class="col-md-4 bg-white mt-1">
+        <div class="col-md-3 p-2 bg-white">
             <div class="row">
                 <div class="col-12 m-0">
                     <h5 class="font-weight-bold py-2">ORDER TOKEN:</h5>
                 </div>
                 <div class="col-12 m-0">
-                    <table class="table table-bordered table--text table-hover">
+                    <table class="table table-bordered table--text table-sm">
                         <thead class="bg-light">
                             <th scope="col">
                                 S/L
@@ -246,18 +235,18 @@
                     </table>
                 </div>
                 <div class="col-12">
-                    <p class="order-token-text py-5 text-center">
+                    <p class="order-token-text py-md-5 text-center">
                             SELECT FOOD ITEM TO ADD TO THE LIST
                     </p>
                 </div>
                 <div class="col-12 m-0">
-                    <table class="table table-bordered table--text table-hover">
+                    <table class="table table-bordered table--text table-sm">
                             <tr>
                                 <td>
-                                    Sub Total : Rs 0.00
+                                    Sub Total : $0.00
                                 </td>
                                 <td>
-                                    VAT(10%) : Rs 0.00
+                                    VAT(10%) : $0.00
                                 </td>
                             </tr>
                             <tr>
@@ -277,16 +266,16 @@
                 <div class="col-12">
                     <div class="row mx-1 px-2 py-2 bg-danger justify-content-between text-white">
                         <h5 class="m-0">Total Bill</h5>
-                        <h5 class="m-0">Rs 0.00</h5>
+                        <h5 class="m-0">$0.00</h5>
                     </div>
                 </div>
                 <div class="col-12 mt-3">
                     <div class="row px-1 justify-content-end">
                         <div class="col-4">
-                            <button class="btn btn-block tomato-color rounded-0">SETTLE</button>
+                            <button class="btn btn-block w-100 tomato-color rounded-0">SETTLE</button>
                         </div>
                         <div class="col-4">
-                            <button class="btn btn-block seagreen-color rounded-0">SUBMIT</button>
+                            <button class="btn btn-block w-100 seagreen-color rounded-0">SUBMIT</button>
                         </div>
                     </div>
                 </div>
