--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                             <input type="checkbox" name="" id="rememberMe" class="form-check-input">
                             <label for="rememberMe" class="form-check-label form-card-text">Remember me</label>
                         </div>
-                        <span class="col-5"><a href="#" class="form-card-text pass"> Forget Password?</a></span>
+                        <span class="col-5"><a href="#" class="form-card-text pass">Forget Password?</a></span>
                     </div>
                     <div class="row ml-1 my-3">
-                        <button class="btn submit-btn"><a href="./Home Page/index.html" class="submit-link">Submit</a></button>
+                        <button class="btn submit-btn"><a href="./Home Page/home-page.html" class="submit-link">Submit</a></button>
                     </div>
                 </form>
             </div>
