--- a/index.html
+++ b/index.html
@@ -10,34 +10,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div class="container main-body bg danger">
+<body id="login-page">
+    <div class="container main-body">
         <div class="row mt-xl-5">
             <div class="col-sm-12">
                 <span><a href="#"><h1 class="m-0 font-weight-bold text-danger">LOGO</h1></a></span>
             </div>
         </div>
         <div class="row justify-content-between">
-            <div class="col-sm-12 col-lg-4 col-xl-4 mt-5">
+            <div class="col-sm-12 col-lg-4 col-xl-4 mt-5 p-4">
                 <span><h3 class="signin">Sign In</h3></span>
                 <form action="">
-                    <div class="card mb-1 p-2 text-center">
-                        <p class="demo-text">Demo login credentials</p>
-                        <p class="demo-text colored-text">This password section is only for demo</p>
+                    <div class="card m-0 mb-3 p-2 text-center">
+                        <p class="m-0 font-normal-bold">Demo login credentials</p>
+                        <p class="m-0 font-normal-bold text-danger">This password section is only for demo</p>
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control mb-2 col-12" placeholder="Email">
-                        <input type="text" class="form-control mb-2 col-12" placeholder="Password">
+                        <input type="text" class="form-control mb-3 col-12" placeholder="Email">
+                        <input type="password" class="form-control mb-3 col-12" placeholder="Password">
                     </div>
-                    <div class="row justify-content-around">
-                        <div class="form-check col-5">
+                    <div class="row px-3 mb-3">
+                        <div class="form-check col-6">
                             <input type="checkbox" name="" id="rememberMe" class="form-check-input">
-                            <label for="rememberMe" class="form-check-label form-card-text">Remember me</label>
+                            <label for="rememberMe" class="form-check-label font-normal">Remember me</label>
                         </div>
-                        <span class="col-5"><a href="#" class="form-card-text pass">Forget Password?</a></span>
+                        <div class="col-6 text-right p-0">
+                            <a href="#" class="font-normal pass">Forget Password?</a>
+                        </div>
                     </div>
-                    <div class="row ml-1 my-3">
-                        <button class="btn submit-btn"><a href="./Home Page/home-page.html" class="submit-link">Submit</a></button>
+                    <div class="row px-3">
+                        <a class="btn btn-success btn-block" href="./Home Page/home-page.html">Submit</a>
                     </div>
                 </form>
             </div>
