--- a/home-page.html
+++ b/home-page.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khadyo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -24,14 +25,14 @@
       <nav class="navbar navbar-expand-md navbar-light col-6 col-md-5 justify-content-end justify-content-md-center">
         <div class="row w-100 justify-content-end justify-content-md-around">
           <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
-              <span><img src="./assets/navbar-logo/list.png" alt="" class="dropdown-icon"></span>
+            <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse col-12" id="collapse_target">
               <ul class="navbar-nav row w-100  m-0 justify-content-around">
                   <li class="nav-item dropdown">
                       <a href="#" class="nav-link navigation-link dropdown-toggle text-dark"  data-toggle="dropdown" data-target="dropdown_target">
-                          <span><img class="rounded-circle navbar-items-logo" src="./assets/navbar-logo/profile-user.png" alt=""></span>
+                          <span><img class="rounded-circle navbar-link-logo" src="./assets/navbar-logo/profile-user.png" alt=""></span>
                           Admin
                       </a>
                       <div class="dropdown-menu" aria-labelledby="dropdown_target">
@@ -50,97 +51,97 @@
 
     <!--CARDS-->
 
-    <div class="cards-wrapper main pb-5 container-fluid">
+    <div class="cards-wrapper main bg-light pb-5 container-fluid">
         <div class="row card-deck pt-5 px-5">
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
-              <img src="./assets/work-periods.jpg" class="card-img-top" alt="card-image">
+              <img src="./assets/Images/work-periods.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title card-head">Work Periods</h2>
+                <h2 class="card-title font-weight-bold text-dark">Work Periods</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="./Working Periods/index.html" class="add-wp shadow plus-sign">+</a>
+                  <a href="./Working Periods/index.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
-              <img src="./assets/pos.jpg" class="card-img-top" alt="card-image">
+              <img src="./assets/Images/pos.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title card-head">Point of Sale</h2>
+                <h2 class="card-title font-weight-bold text-dark">Point of Sale</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="./POS/index.html" class="add-pos shadow plus-sign">+</a>
+                  <a href="./POS/index.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
-              <img src="./assets/order-histories.jpg" class="card-img-top" alt="card-image">
+              <img src="./assets/Images/order-histories.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title card-head">Order Histories</h2>
+                <h2 class="card-title font-weight-bold text-dark">Order Histories</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="./Order Histories/index.html" class="add-oh shadow plus-sign">+</a>
-                </div>
-              </div>
-            </div>
-        </div>
-        <div class="row card-deck px-5">
-            <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
-              <img src="./assets/customers.jpg" class="card-img-top" alt="card-image">
-              <div class="card-body pb-0">
-                <h2 class="card-title card-head">Customers</h2>
-              </div>
-              <div class="row px-3 mb-3 mb-sm-4">
-                <div class="col text-right">
-                  <a href="./Customers/index.html" class="add-cstmr shadow plus-sign">+</a>
-                </div>
-              </div>
-            </div>
-            <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
-              <img src="./assets/kitchen.jpg" class="card-img-top" alt="card-image">
-              <div class="card-body pb-0">
-                <h2 class="card-title card-head">Kitchen</h2>
-              </div>
-              <div class="row px-3 mb-3 mb-sm-4">
-                <div class="col text-right">
-                  <a href="./Kitchen/index.html" class="add-kichn shadow plus-sign">+</a>
-                </div>
-              </div>
-            </div>
-            <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
-              <img src="./assets/reports.jpg" class="card-img-top" alt="card-image">
-              <div class="card-body pb-0">
-                <h2 class="card-title card-head">Reports</h2>
-              </div>
-              <div class="row px-3 mb-3 mb-sm-4">
-                <div class="col text-right">
-                  <a href="#" class="add-reports shadow plus-sign">+</a>
+                  <a href="./Order Histories/index.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
         </div>
         <div class="row card-deck px-5">
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
-              <img src="./assets/manage.png" class="card-img-top" alt="card-image">
+              <img src="./assets/Images/customers.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title card-head">Manage</h2>
+                <h2 class="card-title font-weight-bold text-dark">Customers</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="#" class="add-manage shadow plus-sign">+</a>
+                  <a href="./Customers/index.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
-              <img src="./assets/logout.jpg" class="card-img-top" alt="card-image">
+              <img src="./assets/Images/kitchen.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title card-head">Logout</h2>
+                <h2 class="card-title font-weight-bold text-dark">Kitchen</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="#" class="add-logout shadow plus-sign">+</a>
+                  <a href="./Kitchen/index.html" class="shadow plus-sign">+</a>
+                </div>
+              </div>
+            </div>
+            <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
+              <img src="./assets/Images/reports.jpg" class="img-fluid" alt="card-image">
+              <div class="card-body pb-0">
+                <h2 class="card-title font-weight-bold text-dark">Reports</h2>
+              </div>
+              <div class="row px-3 mb-3 mb-sm-4">
+                <div class="col text-right">
+                  <a href="#" class="shadow plus-sign">+</a>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="row card-deck px-5">
+            <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
+              <img src="./assets/Images/manage.png" class="img-fluid" alt="card-image">
+              <div class="card-body pb-0">
+                <h2 class="card-title font-weight-bold text-dark">Manage</h2>
+              </div>
+              <div class="row px-3 mb-3 mb-sm-4">
+                <div class="col text-right">
+                  <a href="#" class="shadow plus-sign">+</a>
+                </div>
+              </div>
+            </div>
+            <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
+              <img src="./assets/Images/logout.jpg" class="img-fluid" alt="card-image">
+              <div class="card-body pb-0">
+                <h2 class="card-title font-weight-bold text-dark">Logout</h2>
+              </div>
+              <div class="row px-3 mb-3 mb-sm-4">
+                <div class="col text-right">
+                  <a href="#" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
@@ -154,7 +155,7 @@
 <footer class="container-fluid bg-white fixed-bottom py-3">
   <div class="row align-items-center justify-content-center">
       <div class="col-sm-6 col-md-4">
-          <h5 class="m-0 font-weight-bold text-danger">
+          <h5 class="m-0 font-weight-bold text-sm-left text-center mb-sm-0 mb-2 text-danger">
             LOGO
           </h5>
       </div>
