--- a/working-periods.html
+++ b/working-periods.html
@@ -21,7 +21,7 @@
 <div class="nav-bar-wrapper container-md-fluid py-1 shadow-sm sticky-top bg-white">
   <div class="row justify-content-between w-100">
       <div class="logo-area pl-4 col-6 col-md-5">
-        <a href="#">
+        <a href="./home-page.html">
           <h1 class="text-danger font-weight-bold">LOGO</h1>
         </a>
       </div>
