--- a/home-page.html
+++ b/home-page.html
@@ -60,7 +60,7 @@
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="./Working Periods/index.html" class="shadow plus-sign">+</a>
+                  <a href="./working-periods.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
@@ -95,7 +95,7 @@
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="./Customers/index.html" class="shadow plus-sign">+</a>
+                  <a href="./customers.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
