--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khadyo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
@@ -39,13 +39,13 @@
                         </div>
                     </div>
                     <div class="row px-3">
-                        <a class="btn btn-success btn-block" href="./Home Page/home-page.html">Submit</a>
+                        <a class="btn btn-success btn-block" href="./home-page.html">Submit</a>
                     </div>
                 </form>
             </div>
             <div class="col-md-8">
                 <div class="row justify-content-center ">
-                    <img class="intro-bg img-fluid" src="./assets/intro-bg.png" width="550px" alt="pizza-img">
+                    <img class="intro-bg img-fluid" src="./assets/Images/intro-bg.png" width="550px" alt="pizza-img">
                 </div>
             </div>
         </div>
