--- a/home-page.html
+++ b/home-page.html
@@ -106,7 +106,7 @@
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="./Kitchen/index.html" class="shadow plus-sign">+</a>
+                  <a href="./kitchen.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
