--- a/customers.html
+++ b/customers.html
@@ -29,7 +29,7 @@
       <nav class="navbar navbar-expand-md navbar-light col-6 col-md-5 justify-content-end justify-content-md-center">
         <div class="row w-100 justify-content-end justify-content-md-around">
           <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
-              <span><img src="./assets/navbar-logo/list.png" alt="" class="dropdown-icon"></span>
+              <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="collapse navbar-collapse col-12" id="collapse_target">
