--- a/home-page.html
+++ b/home-page.html
@@ -82,7 +82,7 @@
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="./Order Histories/index.html" class="shadow plus-sign">+</a>
+                  <a href="./order-histories.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
