--- a/customers.html
+++ b/customers.html
@@ -54,7 +54,7 @@
 </div>
 
 <!--CUSTOMERS-->
-<div class="main bg-light pt-3 pb-5">
+<div class="main bg--lavender pt-3 pb-5">
   <div class="container-sm-fluid bg-white mx-4 p-3 shadow rounded mb-5">
     <div class="container-sm-fluid px-3">
       <div class="row mb-3">
@@ -67,7 +67,7 @@
             <div class="input-group-prepend">
               <button class="btn bg-danger" type="button"><span><i class="fas text-white fa-search"></i></span></button>
             </div>
-            <input type="text" class="form-control border-0 bg-light-grey" placeholder="Search" aria-label="" aria-describedby="basic-addon1">
+            <input type="text" class="form-control border-0 bg--lavender" placeholder="Search" aria-label="" aria-describedby="basic-addon1">
           </div>
         </div>
         <div class="mb-2 col-12 col-md-2 mt-2 m-md-0 p-0 p-sm-0">
@@ -149,10 +149,10 @@
                   </button>
                   <div class="dropdown-menu p-0 text-center rounded-0" aria-labelledby="dropdownMenuButton">
                     <div>
-                    <button class="btn font-weight-bold font--small text-dark py-2 text-center" type="button">Edit</button>
+                    <button class="btn font-weight-bold font--normal text-dark py-2 text-center" type="button">Edit</button>
                     </div>
                     <div>
-                    <button class="btn font-weight-bold font--small text-dark py-2 text-center" type="button">Delete</button>
+                    <button class="btn font-weight-bold font--normal text-dark py-2 text-center" type="button">Delete</button>
                     </div>
                   </div>
                 </div>
@@ -205,7 +205,7 @@
       </div>
       <div class="modal-body">
         <div class="container-fluid">
-          <form action="" class="new-customers">
+          <form action="" class="">
             <div class="form-group">
               <label for="exampleInputEmail1">Name</label>
               <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="e.g Mr. Wick">
