--- a/home-page.html
+++ b/home-page.html
@@ -117,7 +117,7 @@
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="#" class="shadow plus-sign">+</a>
+                  <a href="./reports.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
