--- a/order-histories.html
+++ b/order-histories.html
@@ -67,7 +67,7 @@
             <div class="input-group-prepend">
               <button class="btn bg-danger shadow-none" type="button"><span><i class="fas text-white fa-search"></i></span></button>
             </div>
-            <input type="text" class="form-control md-placeholder" placeholder="Search by token, customer, branch.." aria-label="" aria-describedby="basic-addon1">
+            <input type="text" class="form-control md-placeholder border-0 bg--lavender" placeholder="Search by token, customer, branch.." aria-label="" aria-describedby="basic-addon1">
           </div>
         </div>
         <div class="col-sm-2 mb-2 m-sm-0 p-0">
