--- a/working-periods.html
+++ b/working-periods.html
@@ -54,7 +54,7 @@
 </div>
 
 <!--WORK PERIODS-->
-<div class="main bg-light pt-3 pb-5">
+<div class="main bg--lavender pt-3 pb-5">
   <div class="container-sm-fluid mb-5 py-3 px-5 bg-white mx-5 shadow rounded">
     <div class="container-sm-fluid pr-1 mb-4">
       <div class="row m-0 mb-4">
@@ -66,7 +66,7 @@
             <div class="input-group-prepend">
               <button class="btn bg-danger text-white" type="button"><span><i class="fas fa-search"></i></span></button>
             </div>
-            <input type="text" class="form-control border-0 bg-light-grey" placeholder="Search by branch, user, data" aria-label="" aria-describedby="basic-addon1">
+            <input type="text" class="form-control border-0 bg--lavender" placeholder="Search by branch, user, data" aria-label="" aria-describedby="basic-addon1">
           </div>
         </div>
         <div class="col-sm-4 mb-2 m-sm-0 p-0 px-sm-2">
