--- a/kitchen.html
+++ b/kitchen.html
@@ -66,7 +66,7 @@
           <form action="">
           <div class="form-row justify-content-end">
             <div class="col-md-2 mb-2 mb-md-0">
-              <button class="btn add-btn btn-danger btn-block text-center text-uppercase" data-toggle="modal" data-target="#addNew" type="button">
+              <button class="btn add-btn btn-danger btn-block text-center text-uppercase" type="button">
                 Refresh
               </button>
             </div>
