--- a/manage.html
+++ b/manage.html
@@ -18,8 +18,8 @@
 </head>
 <body>
 <!--NAV BAR-->
-<div class="container-fluid p-0">
-        <nav class="navbar navbar-expand-md navbar-light sticky-top bg-white shadow-sm py-2 py-md-0 justify-content-md-around">
+<div class="container-fluid p-0 sticky-top">
+        <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm py-2 py-md-0 justify-content-md-around">
             <div class="col-6 col-md-4">
             <a class="navbar-brand text-danger font-weight-bold" href="#">LOGO</a>
             </div>
@@ -29,8 +29,8 @@
             <div class="collapse navbar-collapse justify-content-end p-0 col-6 col-md-4" id="navbarNavDropdown">
               <ul class="navbar-nav p-0 align-items-center">
                 <li class="nav-item dropdown">
-                        <img src="./assets/navbar-logo/profile-user.png" alt="admin-img" class="d-inline img-fluid navbar-items-logo">
-                        <a class="nav-link d-inline dropdown-toggle font-weight-bold dark--black" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="./assets/Images/navbar-logo/profile-user.png" alt="admin-img" class="d-inline img-fluid navbar-link-logo">
+                        <a class="nav-link d-inline dropdown-toggle font-weight-bold text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Admin
                         </a>
                   <div class="dropdown-menu p-0 mt-md-2" aria-labelledby="navbarDropdownMenuLink">
@@ -51,67 +51,67 @@
                 <ul class="list-group" id="accordion">
                     <li class="list-group-item p-0 mb-2">
                       <div class="card-header p-0" id="headingOne">
-                        <a class="py-2 btn btn-outline-danger font--middle font-weight-bold rounded-0 text-left btn-block" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <a class="focused-link py-2 btn btn-outline-danger font--middle font-weight-bold rounded-0 text-left btn-block" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                           FOOD
                         </a>
                       </div>
                       <ul id="collapseOne" class="collapse list-group rounded-0 show" aria-labelledby="headingOne" data-parent="#accordion">
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- ADD NEW ITEM</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- ADD NEW ITEM</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- ALL ITEMS</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- ALL ITEMS</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- GROUPS</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- GROUPS</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- PROPERTIES</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- PROPERTIES</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- VARIATIONS</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- VARIATIONS</a>
                         </li>
                       </ul>
                     </li>
                     <li class="list-group-item p-0 mb-2">
                       <div class="card-header p-0" id="headingTwo">
-                        <a class="py-2 btn btn-outline-danger font--middle font-weight-bold rounded-0 text-left btn-block collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <a class="focused-link py-2 btn btn-outline-danger font--middle font-weight-bold rounded-0 text-left btn-block collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                           USER MANAGEMENT
                         </a>
                       </div>
                       <ul id="collapseTwo" class="collapse list-group rounded-0" aria-labelledby="headingTwo" data-parent="#accordion">
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- ADMIN / STAFF</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- ADMIN / STAFF</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- CUSTOMERS</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- CUSTOMERS</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- WAITERS</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- WAITERS</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- ROLE GROUPS</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- ROLE GROUPS</a>
                         </li>
                       </ul>
                     </li>
                     <li class="list-group-item p-0 mb-2">
                       <div class="card-header p-0" id="headingThree">
-                        <a class="py-2 btn btn-outline-danger font--middle font-weight-bold rounded-0 text-left btn-block collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <a class="focused-link py-2 btn btn-outline-danger font--middle font-weight-bold rounded-0 text-left btn-block collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                           RESTAURANT
                         </a>
                       </div>
                       <ul id="collapseThree" class="collapse list-group rounded-0" aria-labelledby="headingThree" data-parent="#accordion">
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- BRANCHES</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- BRANCHES</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- DEPT TAGS</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- DEPT TAGS</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- TABLES</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- TABLES</a>
                         </li>
                         <li class="list-group-item">
-                            <a href="#" class="text-decoration-none text-dark"><h6 class="mb-0 font-weight-bold font--normal">- PAYMENT TYPES</h6></a>
+                            <a href="#" class="text-decoration-none font-weight-bold text-dark">- PAYMENT TYPES</a>
                         </li>
                       </ul>
                     </li>
