--- a/order-histories.html
+++ b/order-histories.html
@@ -55,13 +55,13 @@
 
 <!--ORDER HISTORY-->
 <div class="main bg--lavender pt-3 pb-5 mb-5">
-  <div class="container-sm-fluid bg-white mx-3 p-3 shadow rounded">
+  <div class="container-sm-fluid bg-white mx-3 p-4 shadow rounded">
     <div class="container-sm-fluid px-3">
       <div class="row mb-3">
         <h2 class="font-weight-bold m-0">Order History</h2>
       </div>
       <form action="" method="get">
-      <div class="row align-items-center justify-content-between">
+      <div class="row align-items-center justify-content-between pr-1">
         <div class="col-sm-4 mb-2 m-sm-0 p-0 pr-sm-5">
           <div class="input-group">
             <div class="input-group-prepend">
@@ -149,7 +149,7 @@
               </td>
               <td>
                 <div class="dropdown">
-                  <button class="btn p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn p-0 shadow-none" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span><i class="fa font-weight-bold font--middle">...</i></span>
                   </button>
                   <div class="dropdown-menu p-0 text-center rounded-0" aria-labelledby="dropdownMenuButton">
@@ -174,7 +174,7 @@
               </td>
               <td>
                 <div class="dropdown">
-                  <button class="btn p-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn p-0 shadow-none" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span><i class="fa font-weight-bold font--middle">...</i></span>
                   </button>
                   <div class="dropdown-menu p-0 text-center rounded-0" aria-labelledby="dropdownMenuButton">
