--- a/manage.html
+++ b/manage.html
@@ -21,7 +21,7 @@
 <div class="container-fluid p-0 sticky-top">
         <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm py-2 py-md-0 justify-content-md-around">
             <div class="col-6 col-md-4">
-            <a class="navbar-brand text-danger font-weight-bold" href="#">LOGO</a>
+            <a class="navbar-brand text-danger font-weight-bold" href="./home-page.html">LOGO</a>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
