--- a/home-page.html
+++ b/home-page.html
@@ -7,7 +7,8 @@
     <title>Khadyo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/styles.css">
-
+    <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -56,7 +57,8 @@
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
               <img src="./assets/Images/work-periods.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title font-weight-bold text-dark">Work Periods</h2>
+                <span class="font-weight-bold text-secondary font--normal"><i class="fas fa-history mr-1"></i>TIME</span>
+                <h2 class="card-title font-weight-bold text-dark mt-1">Work Periods</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
@@ -67,7 +69,8 @@
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
               <img src="./assets/Images/pos.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title font-weight-bold text-dark">Point of Sale</h2>
+                <span class="font-weight-bold text-primary font--normal"><i class="fas fa-cart-plus mr-1"></i>POS</span>
+                <h2 class="card-title font-weight-bold text-dark mt-1">Point of Sale</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
@@ -78,7 +81,8 @@
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
               <img src="./assets/Images/order-histories.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title font-weight-bold text-dark">Order Histories</h2>
+                <span class="font-weight-bold text--seagreen font--normal"><i class="fas fa-pencil-alt mr-1"></i>ORDERS</span>
+                <h2 class="card-title font-weight-bold text-dark mt-1">Order Histories</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
@@ -91,7 +95,8 @@
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
               <img src="./assets/Images/customers.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title font-weight-bold text-dark">Customers</h2>
+                <span class="font-weight-bold text-danger font--normal"><i class="fas fa-user-circle mr-1"></i>CUSTOMERS</span>
+                <h2 class="card-title font-weight-bold text-dark mt-1">Customers</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
@@ -102,7 +107,8 @@
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
               <img src="./assets/Images/kitchen.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title font-weight-bold text-dark">Kitchen</h2>
+                <span class="font-weight-bold text--tomato font--normal"><i class="fas fa-coffee mr-1"></i>KITCHEN</span>
+                <h2 class="card-title font-weight-bold text-dark mt-1">Kitchen</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
@@ -113,7 +119,8 @@
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
               <img src="./assets/Images/reports.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title font-weight-bold text-dark">Reports</h2>
+                <span class="font-weight-bold text-success font--normal"><i class="fas fa-file-alt mr-1"></i>REPORTS</span>
+                <h2 class="card-title font-weight-bold text-dark mt-1">Reports</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
@@ -126,7 +133,8 @@
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
               <img src="./assets/Images/manage.png" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title font-weight-bold text-dark">Manage</h2>
+                <span class="font-weight-bold text-info font--normal"><i class="fas fa-list-alt mr-1"></i>MANAGE</span>
+                <h2 class="card-title font-weight-bold text-dark mt-1">Manage</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
@@ -137,7 +145,8 @@
             <div class="card col-sm-4 shadow p-0 mb-5 rounded bg-white">
               <img src="./assets/Images/logout.jpg" class="img-fluid" alt="card-image">
               <div class="card-body pb-0">
-                <h2 class="card-title font-weight-bold text-dark">Logout</h2>
+                <span class="font-weight-bold text-warning font--normal"><i class="fas fa-sign-out-alt mr-1"></i>EXIT</span>
+                <h2 class="card-title font-weight-bold text-dark mt-1">Logout</h2>
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
